--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,11 +22,11 @@ jobs:
         run: cp README.md Documentation/index.md
 
       - name: Create .nojekyll file
-        run: echo "" > docs/_site/.nojekyll
+        run: echo "" > Documentation/_site/.nojekyll
 
     # List deployed files to confirm .nojekyll exists
       - name: List deployed files
-        run: ls -la docs/_site
+        run: ls -la Documentation/_site
 
 
       - name: Build
