--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Build
         run: docfx Documentation/docfx.json
 
+      - name: Create .nojekyll file
+        run: echo "" > Documentation/.nojekyll
+
+    # List deployed files to confirm .nojekyll exists
+      - name: List deployed files
+        run: ls -la _site
       # Upload the generated documentation
       - name: Upload site artifact
         uses: actions/upload-artifact@v1
