--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,8 +1,8 @@
 name: Example documentation
 
-on:
-  push:
-    branches:
+on: 
+  push: 
+    branches: 
       - main
 
 jobs:
@@ -12,30 +12,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        # with:
-        #   submodules: true
-
+        
       - name: Install DocFX
         run: choco install -y docfx
-
+        
       - name: Use README.md as index.md
         run: cp README.md Documentation/index.md
-
+        
       - name: Build
         run: docfx Documentation/docfx.json
-
+        
       - name: Create .nojekyll file
         run: echo "" > Documentation/.nojekyll
 
-    # List deployed files to confirm .nojekyll exists
+      # List deployed files to confirm .nojekyll exists
       - name: List deployed files
-        run: ls -la _site
+        run: ls -la Documentation/_site
+        
       # Upload the generated documentation
       - name: Upload site artifact
         uses: actions/upload-artifact@v1
         with:
           name: _site
-          path: _site # Must equals the 'build.dest' value on your docfx.json
+          path: Documentation/_site # Must match the 'build.dest' value in your docfx.json
 
   # Deploy the generated documentation to the gh-pages branch
   deploy:
@@ -44,8 +43,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        # with:
-        #   submodules: true
 
       # Download the generated documentation
       - name: Download site artifact
